src/components/Projects/ProjectCard/style.scss
.ProjectCard_Container {
    padding: 38px 44px;
    margin: 25px 0;
    border-radius: 10px;
    cursor: pointer;

    h1 {
        font-size: 1.6rem;
        margin: 0;
    }

    .ProjectCard_Content {
        padding-top: 40px;
        line-height: 25px;

        .ProjectCard_Description {
            margin-bottom: 30px;
        }
        
        ul {
            padding: 9px 25px;
        }
    }
}

